[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/ennemies/zoimbie1_stand.png" type="Texture" id=1]
[ext_resource path="res://art/ennemies/zoimbie1_hold.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/zombie/zombie_breathing_1.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sfx/zombie/zombie_dying.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/zombie/zombie_attack_1.wav" type="AudioStream" id=5]
[ext_resource path="res://enemy.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "move",
"speed": 0.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "breath"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.98, 0.98 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -316.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.994, 0.994 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 237.131, 193.689 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.45, 0.45 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "move"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 17.514, -15.3717, 17.6037, -8.37158, 15.2703, -5.94847, 9.16769, -6.30745, 8.89846, -4.69204, 12.1293, -0.0253086, 8.44974, 7.69275, 9.16769, 8.41071, 15.8986, 8.23122, 17.7832, 12.898, 17.9627, 17.2057, 11.3216, 21.9622, -8.24281, 21.7827, -12.1018, 15.9493, -11.9224, 8.14148, -15.0634, 2.30806, -14.7942, -2.8074, -12.5506, -5.94847, -11.8326, -15.5512, -6.35817, -21.2948, 11.7511, -18.7353 )

[node name="Breath" type="AudioStreamPlayer2D" parent="."]
scale = Vector2( 2.22222, 2.22222 )
stream = ExtResource( 3 )
autoplay = true
max_distance = 250.0

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 300.0

[node name="SFX" type="Node" parent="."]

[node name="Attack" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "breath"
anims/breath = SubResource( 2 )
anims/die = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -22.0
margin_top = -20.1684
margin_right = -18.0
margin_bottom = 20.8316
custom_styles/fg = SubResource( 5 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 236.062, -2.09693 )
shape = SubResource( 6 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea"]
polygon = PoolVector2Array( 10.3601, -0.744239, 14.2681, 39.8386, 49.4399, 16.0901, 49.4399, -13.6706, 18.4767, -39.5234 )

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.504

[node name="AttackCooldown" type="Timer" parent="."]
[connection signal="finished" from="Die" to="." method="_on_Die_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
